--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "vercel": "npm run prisma && npm run build"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.7",
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.5",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@jonbilous/easy-remix-apis": "^1.4.0",
     "@jonbilous/utils": "^1.9.0",
     "@prisma/client": "^4.8.1",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/vercel": "^1.15.0",
+    "@saas-ui/react": "^2.0.3",
     "@sendgrid/mail": "^7.7.0",
     "@vercel/node": "^2.6.2",
     "framer-motion": "^6.5.1",
