--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@jonbilous/easy-remix-apis": "^1.4.0",
+    "@jonbilous/easy-remix-apis": "^1.5.0",
     "@jonbilous/utils": "^1.9.0",
     "@prisma/client": "^4.8.1",
     "@remix-run/node": "^1.18.1",
@@ -22,7 +22,7 @@
     "@saas-ui/react": "^2.0.3",
     "@saas-ui/theme": "^2.0.0",
     "@sendgrid/mail": "^7.7.0",
-    "@vercel/node": "^2.6.2",
+    "@vercel/remix": "^1.18.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
